# einsum

./: .gitignore  README.md  einsum.py  pyproject.toml  test_einsum.py
