[tool.poetry]
name = "einsum"
version = "0.0.1"
description = ""
authors = ["Kaido Iwamoto <h6824.kaido@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/odiak/einsum.git"
packages = [
    {include="einsum.py"},
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
mypy = "^0.701.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
